create method GetUserCollection

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 SERVER_HOST="0.0.0.0:8080"
+APPLY_URI="mongodb+srv://mongoadmin:VusySG2PE99IYRKr@cluster0.mv3mm.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
